Fixed bug with Location constructor And added Hash utilities